# pkg_tar_sample

./: BUILD.bazel  WORKSPACE  go.mod  go_repositories.bzl
cmd/pkg_tar/: BUILD.bazel  main.go
example/: 1.txt  2.txt  BUILD.bazel
pkg/tar_helper/: BUILD.bazel  tar_helper.go
rules/: file_size.bzl  pkg_tar.bzl
